@@ -21,3 +21,4 @@ require("prototypes.storages.storage-recipe")
 require("prototypes.storages.storage-item")
 
 require("prototypes.styles.fi-style-gui")
+require("prototypes.sounds")
