@@ -346,8 +346,10 @@ complex-foods=Combine things together for the perfect meals.
 advanced-nutrient-extraction=Extract nutrients from food and make them easy to consume.
 effect-capsules=Boost the abilities of your body with food supplements.
 
-fi-tech-more-energy=Adds +50 for maximum Energy.
-fi-tech-more-energy-3=Adds +100 for maximum Energy.
+fi-tech-more-energy=Adds more maximum Energy (1-2 tiers = +50, 3-5 tiers = +100, total max=500).
+
+[technology-effect]
+fi-tech-more-energy-bonus=Adds +__1__ to maximum Energy
 
 
 [achievement-name]
