@@ -346,8 +346,10 @@ complex-foods=Комбинирование пищи для идеального 
 advanced-nutrient-extraction=Извлечение питательных веществ из пищи для её легкого потребления.
 effect-capsules=Улучшите способности вашего тела с этими пищевыми добавками.
 
-fi-tech-more-energy=Добавляет +50 единиц к максимальному значению Энергии.
-fi-tech-more-energy-3=Добавляет +100 единиц к максимальному значению Энергии.
+fi-tech-more-energy=Добавляет больше единиц к максимальному значению Энергии (уровни 1-2 = +50, уровни 3-5 = +100, всего макс.=500).
+
+[technology-effect]
+fi-tech-more-energy-bonus=Добавляет +__1__ единиц к максимальному значению Энергии.
 
 
 [achievement-name]
