@@ -1,0 +1,41 @@
+data:extend({
+	
+	{
+		type = "sound",
+		name = "deconstruct-wood-sound",
+		variations =
+		{
+			{
+				filename = "__FoodIndustry__/sounds/deconstruct-wood.ogg",
+				volume = 0.9
+			},
+		},
+	},
+	{
+		type = "sound",
+		name = "use-food-capsule-sound",
+		variations =
+		{
+			{
+				filename = "__FoodIndustry__/sounds/lineage-ii-potion-use.ogg",
+				volume = 1.0
+			}
+		},
+	},
+	--[[{
+		type = "sound",
+		name = "use-effect-capsule-sound",
+		variations =
+		{
+			{
+				filename = "__FoodIndustry__/sounds/buff-1.ogg",
+				volume = 0.9
+			},
+			{
+				filename = "__FoodIndustry__/sounds/buff-1.ogg",
+				volume = 0.9
+			},
+		},
+	},]]
+	
+})
